# gonzalo_ws

./: comandos_lanzamiento.txt  frames_2025-12-16_11.53.01.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/sancho_navigation/lib/sancho_navigation/: greenhouse_navigator  lineal_route_generator  plant_doctor  route_generator  route_visualizer  waypoint_saver
install/sancho_navigation/share/sancho_navigation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/sancho_navigation/share/sancho_navigation/config/: greenhouse_config.yaml  mapper_params_online_async.yaml  my_route.yaml  nav2_params.yaml  nav2_params_real.yaml  nav2_params_sim.yaml  rviz.rviz
log/: latest_build
maps_sancho/: map.pgm  mapir_lab_localization.pgm  mapir_lab_localization.yaml  mapir_lab_navigation.pgm  mapir_lab_navigation.yaml
src/sancho_navigation/: package.xml  setup.cfg  setup.py
src/sancho_navigation/config/: greenhouse_config.yaml  mapper_params_online_async.yaml  mapper_params_real.yaml  my_route.yaml  nav2_params.yaml  nav2_params_real.yaml  nav2_params_sim.yaml
src/sancho_navigation/launch/: nav2_route.launch.py  navigation.launch.py  real_navigation.launch.py  simulation.launch.py
src/sancho_navigation/maps/: greenhouse_map.pgm  greenhouse_map.yaml  greenhouse_raw.pgm  prueba.pgm  prueba.yaml
src/sancho_navigation/sancho_navigation/: greenhouse_navigator.py  lineal_route_generator.py  plant_doctor.py  route_generator.py
src/sancho_navigation/worlds/: greenhouse.world
(+11 files in other folders)
